--- a/landing.html
+++ b/landing.html
@@ -76,7 +76,14 @@
               </a>
             </div>
           </div>
-          <!-- <div class="swiper-slide dark-layer">
+          <div class="media-icons">
+            <a href="https://www.facebook.com/profile.php?id=100078944025433"
+              ><i class="uil uil-facebook-f"></i
+            ></a>
+            <a href=""><i class="uil uil-instagram"></i></a>
+            <a href=""><i class="uil uil-twitter"></i></a>
+          </div>
+          <div class="swiper-slide dark-layer">
             <img src="images/cat.jpg" />
             <div class="text-content">
               <h2 class="title">Balagtas <span>Branch</span></h2>
@@ -97,7 +104,7 @@
               <a href=""><i class="uil uil-instagram"></i></a>
               <a href=""><i class="uil uil-twitter"></i></a>
             </div>
-          </div> -->
+          </div>
         </div>
       </div>
       <div class="bg-slider-thumbs">
