Design, record, appointment pending, approved, and then complete. Deisgn ng dashboard, pos

--- a/landing.html
+++ b/landing.html
@@ -63,7 +63,7 @@
           <div class="swiper-slide dark-layer">
             <img src="images/1.jpg" />
             <div class="text-content">
-              <h2 class="title">BARKSPACE <span>Inc.</span></h2>
+              <h2 class="title" >BARKSPACE <span>Inc.</span></h2>
 
               <p>
                 Contact No. 0923-9530933 <br />
@@ -75,13 +75,13 @@
                 </button>
               </a>
             </div>
-          </div>
-          <div class="media-icons">
-            <a href="https://www.facebook.com/profile.php?id=100078944025433"
-              ><i class="uil uil-facebook-f"></i
-            ></a>
-            <a href=""><i class="uil uil-instagram"></i></a>
-            <a href=""><i class="uil uil-twitter"></i></a>
+            <div class="media-icons">
+              <a href="https://www.facebook.com/profile.php?id=100078944025433"
+                ><i class="uil uil-facebook-f"></i
+              ></a>
+              <a href=""><i class="uil uil-instagram"></i></a>
+              <a href=""><i class="uil uil-twitter"></i></a>
+            </div>
           </div>
           <div class="swiper-slide dark-layer">
             <img src="images/cat.jpg" />
@@ -124,7 +124,7 @@
               >of everything We Do</span
             >
           </h1>
-          <img src="images/pic.jpg" width="300" height="450" alt="" />
+          <img src="images/he.jpg" width="300" height="450" alt="" />
         </div>
         <div class="aboutList" data-aos="fade-left" data-aous-duration="1000">
           <ol>
